--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -46,7 +46,7 @@
     background: rgba(5, 5, 5, .84);
 }
 
-.logo {
+/* .logo {
     text-decoration: none;
     background: 50% 100% / 50% 50% no-repeat
                 radial-gradient(ellipse at bottom, #ffffff, transparent, transparent);
@@ -54,9 +54,14 @@
     background-clip: text;
     color: transparent;
     font-size: 5vh;
-    /* font-family: "Source Sans Pro", sans-serif; */
     animation: reveal 3000ms ease-in-out forwards 200ms
-} 
+}  */
+
+.logo {
+    text-decoration: none;
+    color: #E9EAEC;
+    font-size: 5vh;
+}
 
 
 @media all and (max-width: 300px) {
