--- a/src/components/ProfileGalleryExpanded/ProfileGalleryExpanded.css
+++ b/src/components/ProfileGalleryExpanded/ProfileGalleryExpanded.css
@@ -11,27 +11,27 @@
 }
 
 .backstripe-horizontal{
-    /* top: 15px; */
-    transform-origin: left center;
-    transform-origin: 0 0;
+    top: 8px;
+    transform-origin: center center;
     transform: rotate(-45deg);
-    width: 20px
+    width: 20px;
+    
 }
 
 .backstripe-vertical {
-    transform-origin: 0 0;
+    transform-origin: center center;
     transform: rotate(45deg);
     width: 20px;
     margin-left: 1px;
+    top: 22px
 }
 
 .back-icon {
-    width: 42px;
+    width: 22px;
     height: 32px;
     position: relative;
     transform: rotate(0deg);
     cursor: pointer;
-    top: 7.2vh;
     left: 3vw;
     position: fixed;
 }
