--- a/src/components/Connection/Connection.css
+++ b/src/components/Connection/Connection.css
@@ -18,11 +18,21 @@
     font-size: 2vh;
 }
 
-.connection-nav-username {
-    font-size: 4vh;
-    font-weight: bold;
-}
-
 .connection-wrapper {
     width: 100vw;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.connection-wrapper button {
+    margin-right: 3vw;
+    height: 3.2vh;
+    font-weight: bold;
+    font-family: 'Lato';
+}
+
+.following {
+    padding: 0 4vw 0 4vw;
 }
