--- a/src/components/ProfileUserInformation/ProfileUserInformation.css
+++ b/src/components/ProfileUserInformation/ProfileUserInformation.css
@@ -6,8 +6,8 @@
 }
 
 .user-fullname {
-    margin: 0 0 2vh 3vw;
-    color: #0252A2;
+    margin: 0 0 3vh 3vw;
+    color: #6A6E7C;
     font-weight: bold;
 }
 
